@@ -1,3 +1,10 @@
+2005-06-16  Vincent Noel  <vnoel@cox.net>
+
+	* calendar.c:
+	* desc_db.c:
+	* logview.c:
+	* userprefs.c: Fix implicit includes.
+
 2005-06-14  Vincent Noel  <vnoel@cox.net>
 
 	* logrtns.c: (ReadNewLines):
